# autoswap-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: sdk_ci.yml
examples/: README.md  advanced_usage.rs  basic_usage.rs  demo.rs  real_contract_usage.rs
src/: client.rs  contracts.rs  contracts_test.rs  lib.rs  provider.rs  simple_client.rs  swappr.rs
src/constant/: mod.rs  util.rs
src/types/: connector.rs
