[package]
name = "autoswap-rust-sdk"
license = "MIT"
authors = [""]
description = "AutoSwappr library in Rust"
repository = "https://github.com/BlockheaderWeb3-Community/autoswap-rust-sdk"
keywords = [
    "starknet",
    "cairo",
    "defi",
    "swap",
    "ekubo",
    "autoswappr",
    "swap"
]
documentation = ""
exclude = [".github/**"]
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "1fc8b91efd861542ad69b2e3d4b1c38bc350c7de" }
serde = {version="1.0.219", features=["derive"]}