[package]
name = "autoswap-rust-sdk"
license = "MIT"
authors = [""]
description = "AutoSwappr library in Rust"
repository = "https://github.com/BlockheaderWeb3-Community/autoswap-rust-sdk"
keywords = [
    "starknet",
    "cairo",
    "defi",
    "swap",
    "ekubo",
    "autoswappr",
    "swap"
]
documentation = ""
exclude = [".github/**"]
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
serde = {version="1.0.219", features=["derive"]}
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
hex = "0.4"
starknet = "0.17.0"
starknet-contract = "0.16.0"
starknet-accounts = "0.16.0"
starknet-providers = "0.16.0"
starknet-core = "0.16.0"
