[package]
name = "autoswap-rs"
license = "MIT"
authors = ["BlockheaderWeb3 <Dev@blockheaderweb3.org>"]
description = "AutoSwappr library in Rust"
repository = "https://github.com/BlockheaderWeb3-Community/autoswap-rust-sdk"
keywords = [
    "starknet",
    "cairo",
    "defi",
    "swap",
    "ekubo",
    "autoswappr",
    "swap"
]
documentation = "https://github.com/BlockheaderWeb3-Community/autoswap-rust-sdk"
exclude = [".github/**", "examples/",]
version = "0.1.0"
edition = "2024"

autoexamples = false

[dependencies]
thiserror = "2.0.16"
serde = {version="1.0.219", features=["derive"]}
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
starknet = "0.17.0"
axum ={ version = "0.8.6", features = ["macros"] }